[package]
name = "consolejoy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.24.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
http = "0.2.7"
futures-util = "0.3"
ctrlc = "3.2.2"
log = "0.4.17"
env_logger = "0.9.0"
clap = { version = "3.1.18", features = ["derive", "env"] }
daemonize = "0.4.1"

[profile.release]
strip = true
lto = true